json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail02.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail02.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Eof,
        origin: "",
        row: 1,
        column: 17,
    },
)
