json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail07.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail07.json
---
Err(
    ExpectedTokenError {
        expected: [
            Eof,
        ],
        actual: Comma,
        origin: ",",
        row: 1,
        column: 25,
    },
)
