json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail11.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail11.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBrace,
        ],
        actual: Illegal,
        origin: "+",
        invalid_row: 1,
        invalid_col: 26,
    },
)
